# benchmark_graph_transformer

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .style.yapf  README.md  config.yaml  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: ci.yml
configs/: default.yaml
configs/data/: data.yaml
configs/model/: common.yaml  gat.yaml  gcn.yaml  gin.yaml  graph_transformer.yaml  model.yaml  sage.yaml  transformer.yaml
configs/model/variants/: basic.yaml  bias.yaml  bias_edge.yaml  bias_hop.yaml  bias_spatial.yaml  full.yaml  full_gcn_parallel.yaml  full_gcn_post.yaml  full_gcn_pre.yaml  gcn_parallel.yaml  gcn_post.yaml  gcn_pre.yaml  gnn_node.yaml  pos.yaml  pos_degree.yaml  pos_eigen.yaml  pos_svd.yaml
configs/sweeper/: optuna.yaml
configs/training/: default.yaml  training.yaml
scripts/: install_project_deps.sh  monitor_resources.sh  quick_start_aces.sh  run_models.py  run_sweep.ps1  setup_python_aces.sh  setup_web_proxy.sh  test_download_fsspec.sh  test_download_requests.sh
src/graph_transformer_benchmark/: cli.py  data.py  evaluate.py  model.py  train.py  utils.py
src/graph_transformer_benchmark/data/: __init__.py  datasets.py  loaders.py  samplers.py  utils.py
src/graph_transformer_benchmark/evaluation/: __init__.py  api.py  classification_metrics.py  metrics.py  predictors.py  regression_metrics.py  task_detection.py  types.py
src/graph_transformer_benchmark/graph_models/: __init__.py  backbones.py  base.py  builders.py  factory.py  model.py  node.py  transformer.py
src/graph_transformer_benchmark/training/: base.py  graph_transformer_trainer.py  tqdm_configuration.py
src/graph_transformer_benchmark/utils/: __init__.py  config_utils.py  data_utils.py  device.py  mlflow_utils.py  model_utils.py  seed.py
test/: conftest.py  test_cli.py  test_data.py  test_evaluate.py  test_graph_models.py  test_graph_models_transformer.py  test_model.py  test_models.py  test_train.py  test_train_real_data.py  test_transformer_builder.py  test_utils.py
test/data/: __init__.py  conftest.py  test_datasets.py  test_loaders.py  test_neighbor_loader.py  test_samplers.py  test_utils.py
test/evaluation/: test_api.py  test_classification_metrics.py  test_metrics.py  test_predictors.py  test_regression_metrics.py  test_task_detection.py
test/fixtures/: config_fixtures.py  data_fixtures.py  dataset_fixtures.py  model_fixtures.py  training_fixtures.py
test/training/: test_base.py
test/utils/: test_config_utils.py  test_data_utils.py  test_device.py  test_mlflow_utils.py  test_model_utils.py  test_seed.py
