[tool.poetry]
name        = "graph-transformer-benchmark"
version     = "0.1.0"
description = "Benchmark suite for GraphTransformer variants with MLflow & Hydra"
authors     = ["Omar Khater"]
license     = "MIT"
readme      = "README.md"
packages    = [
  { include = "graph_transformer_benchmark", from = "src" }
]

[tool.poetry.dependencies]
python            = "^3.12"
torch             = "^2.7"
torch-geometric   = { git = "https://github.com/omarkhater/pytorch_geometric.git", rev = "add_graph_transformer" }
mlflow            = "^2.22"
hydra-core        = "^1.3"

[tool.poetry.group.dev]
optional = false  # install this group by default

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[build-system]
requires    = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
